SF-118: Mail is not shown correctly: - Change wrap lines option

--- a/gui/css/newMainCss.css
+++ b/gui/css/newMainCss.css
@@ -2514,7 +2514,7 @@
     }
 
     .preformat-text {
-        white-space: pre-wrap
+        white-space: pre-line;
     }
 }
 
